# SOFA-CPP

./: .gitignore  CMakeLists.txt  DOXYFILE
inc/: SOFA.h  SOFAAPI.h  SOFAAttributes.h  SOFACoordinates.h  SOFADate.h  SOFAEmitter.h  SOFAExceptions.h  SOFAFile.h  SOFAGeneralFIR.h  SOFAGeneralFIRE.h  SOFAGeneralTF.h  SOFAHelper.h  SOFAListener.h  SOFAMultiSpeakerBRIR.h  SOFANcFile.h  SOFANcUtils.h  SOFAPlatform.h  SOFAPoint3.h  SOFAPosition.h  SOFAReceiver.h  SOFASimpleFreeFieldHRIR.h  SOFASimpleFreeFieldSOS.h  SOFASimpleHeadphoneIR.h  SOFASingleRoomDRIR.h  SOFASource.h  SOFAString.h  SOFAUnits.h  SOFAUtils.h
src/: SOFAAPI.cpp  SOFAAttributes.cpp  SOFACoordinates.cpp  SOFADate.cpp  SOFAEmitter.cpp  SOFAExceptions.cpp  SOFAFile.cpp  SOFAGeneralFIR.cpp  SOFAGeneralFIRE.cpp  SOFAGeneralTF.cpp  SOFAHelper.cpp  SOFAListener.cpp  SOFAMultiSpeakerBRIR.cpp  SOFANcFile.cpp  SOFAPoint3.cpp  SOFAPosition.cpp  SOFAReceiver.cpp  SOFASimpleFreeFieldHRIR.cpp  SOFASimpleFreeFieldSOS.cpp  SOFASimpleHeadphoneIR.cpp  SOFASingleRoomDRIR.cpp  SOFASource.cpp  SOFAString.cpp  SOFAUnits.cpp  json2sofa.cpp  sofa2json.cpp
test/: sofaexamples.cpp  sofainfo.cpp  sofamisc.cpp
